# HELPYY

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY_PLAN.md  ESTADO_ACTUAL.md  Makefile  README.md  docker-compose.yml  pyproject.toml  run_data_generation.py
.github/workflows/: ci-cd.yml
MLRepo/: .gitignore  README.md  requirements.txt
MLRepo/notebooks/: 01_data_model_and_synthetic_design.ipynb
MLRepo/src/: mt_generator.py
backend/agents/: base_agent.py  credit_evaluator_agent.py  financial_advisor_agent.py  helpyy_general_agent.py  onboarding_agent.py  orchestrator.py  persistent_monitor_agent.py  prompt_loader.py
backend/api/: activation_codes.py  dependencies.py  main.py
backend/data/: database.py  faq_bbva.json  schemas.py  seed_data.py
backend/llm/: __init__.py  bedrock_provider.py  config.py  ollama_provider.py  provider.py
backend/ml_client/: README.md  client.py  contract.py  embedded_predictor.py  mock_server.py  schemas.py
backend/observability/: business_metrics.py  contract_monitor.py  cost_tracker.py  llm_logger.py  metrics.py  ml_health.py
backend/security/: __init__.py  audit_logger.py  pii_detokenizer.py  pii_tokenizer.py  (+1 more)
descriptives/: README.md  app.py
docs/: AGENTS_ML_DEEP_DIVE 2.md  AGENT_DESIGN.md  API_REFERENCE.md  ARCHITECTURE.md  DEV_LOCAL.md  HelpyHand - Doc.docx  HelpyHand - Flowchart.drawio  LOCAL_SETUP.md  PII_POLICY.md  PITCH_TED.md  PROXIMOS_PASOS.md  data_model.md
notebooks/: 01_data_model_and_synthetic_design.ipynb
scripts/: deploy.sh  run_local.sh  seed_db.py  test_llm.py
tests/: conftest.py
(+102 files in other folders)
