[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helpyy-hand"
version = "0.1.0"
description = "Multi-agent financial inclusion platform for BBVA Colombia"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101"]  # Allow assert in tests

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "pii: tests related to PII security",
    "agents: tests requiring LLM",
    "contract: ML contract tests",
    "integration: integration tests",
]

[tool.setuptools.packages.find]
include = ["backend*"]
